updating cors for eployed urls

--- a/server-side/.env
+++ b/server-side/.env
@@ -7,6 +7,7 @@ CLOUDINARY_KEY=835796728974187
 CLOUDINARY_SECRET=uDKUmQPgYQraCG27vQEW_Lb3fE0
 
 CLIENT_URL=http://localhost:3000
+DEPLOYED_URL=https://social-media-989s1r9v9-extremelinks-projects.vercel.app
 
 
 
